fixes spinner z-index
fixes #185

--- a/src/scss/_apex_preloader.scss
+++ b/src/scss/_apex_preloader.scss
@@ -1,6 +1,7 @@
 .u-Processing {
     padding: 0;
     background-color: transparent;
+    z-index: 995;
 }
 
 .u-Processing-spinner {
